[package]
name = "d0"
version = "0.1.0"
authors = ["lynnagara <lyn.nagara@gmail.com>"]
edition = "2018"
description = ""
license = "MIT"
repository = ""

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
lazy_static = "1.3.0"
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3.4"
features  = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'HtmlCanvasElement',
  'CanvasRenderingContext2d',
  'EventTarget',
  'MouseEvent',
  'console',
 ]
